--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "dependencies": {
     "@babel/core": "^7.14.0",
     "@babel/preset-react": "^7.13.13",
+    "gray-matter": "^4.0.3",
     "next": "^10.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "frontmatter-markdown-loader": "^3.6.2"
+    "@types/react": "^17.0.5",
+    "frontmatter-markdown-loader": "^3.6.2",
+    "typescript": "^4.2.4"
   }
 }
